# retinopathy_test

./: .gitignore  .stestr.conf  Jenkinsfile  LICENSE  README.md  _Jenkinsfile  requirements.txt  setup.cfg  split.py  test-requirements.txt  tox.ini
docker/: Dockerfile.dev  Dockerfile.tests
docs/: Makefile  conf.py  index.rst  make.bat
models/retinopathy_serve/1533577729/: saved_model.pb
models/retinopathy_serve/1533577729_gpu/variables/: variables.index
models/retinopathy_serve/1540408813/: saved_model.pb
models/retinopathy_serve/1540408813/variables/: variables.index
models/retinopathy_serve_short/1540395192/: saved_model.pb
notebooks/: 1.0-retinopathy_test_start.py2.ipynb
official/utils/logs/: logger.py
retinopathy_test/: config.py
retinopathy_test/dataset/: convert_to_tf.py  convert_to_tf_short.py  make_dataset.py
retinopathy_test/dataset/records/: tr.lst  tr_short.lst  va.lst  va_short.lst
retinopathy_test/features/: build_features.py
retinopathy_test/models/: .model.py.kate-swp  .run_prediction.py.kate-swp  healthy.tiff  model.py  resnet_model.py  resnet_run_loop.py  retinopathy_main.py  retinopathy_main_short.py  run_prediction.py
retinopathy_test/models/retinopathy_serve_update/1555330278/: saved_model.pb
retinopathy_test/models/retinopathy_serve_update/1555331281/: saved_model.pb
retinopathy_test/models/retinopathy_serve_update/1555331400/: saved_model.pb
retinopathy_test/tests/: check_docker_start.sh  test_func_model.py  test_unit_model.py
retinopathy_test/tests/input/: dr4.tiff
retinopathy_test/visualization/: visualize.py
(+2 files in other folders)
