[metadata]
name = retinopathy_test
summary = Retinopathy classification using Tensorflow
description-file =
    README.md
author = HMGU
author-email = itokeiic@gmail.com
version = 0.5
license = MIT
home-page = http://github.com/itokeiic/retinopathy_test
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    retinopathy_test

[entry_points]
deepaas.v2.model = 
    retinopathy_test = retinopathy_test.models.model

